--- a/GameServer/GameServer/GameServer.csproj
+++ b/GameServer/GameServer/GameServer.csproj
@@ -37,7 +37,7 @@
     <Compile Include="GameSever.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StateObject.cs" />
+    <Compile Include="StateObjects.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
