add messenger class, udp not recving on windows

--- a/MultiplayerPlatformer/MultiplayerPlatformer/MultiplayerPlatformer.vcxproj
+++ b/MultiplayerPlatformer/MultiplayerPlatformer/MultiplayerPlatformer.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TCPNetwork.cpp" />
+    <ClCompile Include="UDPMessenger.cpp" />
     <ClCompile Include="UDPNetwork.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -147,10 +148,11 @@
     <ClInclude Include="GameDataTCP.pb.h" />
     <ClInclude Include="GameDataUDP.pb.h" />
     <ClInclude Include="GameState.h" />
-    <ClInclude Include="Messager.h" />
+    <ClInclude Include="Messenger.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TCPNetwork.hpp" />
+    <ClInclude Include="UDPMessenger.h" />
     <ClInclude Include="UDPNetwork.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
